[gd_scene load_steps=13 format=2]

[ext_resource path="res://lymphocyte7.png" type="Texture" id=1]
[ext_resource path="res://TargetCell.gd" type="Script" id=2]
[ext_resource path="res://lymphocyte8.png" type="Texture" id=3]
[ext_resource path="res://lymphocyte1.png" type="Texture" id=4]
[ext_resource path="res://lymphocyte4.png" type="Texture" id=5]
[ext_resource path="res://lymphocyte3.png" type="Texture" id=6]
[ext_resource path="res://lymphocyte5.png" type="Texture" id=7]
[ext_resource path="res://lymphocyte6.png" type="Texture" id=8]
[ext_resource path="res://endocrine cell.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 296.498, 337.167 )

[sub_resource type="CircleShape2D" id=2]
radius = 503.4

[sub_resource type="Animation" id=4]
resource_name = "Burst"
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.16, 0.32, 0.48, 0.66, 0.84, 0.96 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 3 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.98 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_Burst_ended"
} ]
}

[node name="TargetCell" type="KinematicBody2D"]
scale = Vector2( 0.2, 0.2 )
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )

[node name="BindingArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BindingArea"]
visible = false
shape = SubResource( 2 )

[node name="InfectionTimer" type="Timer" parent="."]
wait_time = 25.0

[node name="InfectionProgress" type="ProgressBar" parent="."]
margin_left = -284.073
margin_top = -637.355
margin_right = 241.927
margin_bottom = -506.355
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Burst = SubResource( 4 )
[connection signal="area_entered" from="BindingArea" to="." method="_on_BindingArea_area_entered"]
[connection signal="area_exited" from="BindingArea" to="." method="_on_BindingArea_area_exited"]
